--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
   "dependencies": {
     "@ant-design/icons": "^5.6.1",
     "@ant-design/nextjs-registry": "^1.0.2",
+    "@apollo/client": "^3.13.4",
+    "@radix-ui/react-slot": "^1.1.2",
     "@svgr/webpack": "^8.1.0",
-    "antd": "^5.24.3",
+    "antd": "^5.15.0",
     "axios": "^1.7.9",
     "cookies-next": "^5.1.0",
+    "framer-motion": "^12.5.0",
+    "graphql": "^16.10.0",
     "jotai": "^2.12.1",
+    "lucide-react": "^0.482.0",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.85.1"
+    "react-icons": "^5.5.0",
+    "sass": "^1.85.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.4",
