--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@apollo/client": "^3.13.4",
     "@radix-ui/react-slot": "^1.1.2",
     "@svgr/webpack": "^8.1.0",
-    "antd": "^5.24.4",
+    "antd": "^5.24.6",
     "axios": "^1.7.9",
     "cookies-next": "^5.1.0",
     "framer-motion": "^12.5.0",
@@ -24,6 +24,7 @@
     "graphql-request": "^7.1.2",
     "jotai": "^2.12.1",
     "lucide-react": "^0.482.0",
+    "moment": "^2.30.1",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
